	PR c/42708 	* c-typeck.c (build_c_cast): Fold value cast to union type before 	wrapping it in a CONSTRUCTOR.

testsuite:
	* gcc.c-torture/compile/pr42708-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@155846 138bc75d-0d04-0410-961f-82ee72b054a4